# data-detector

./: .gitignore  .gitmodules  CHANGELOG.md  CHINESE_NLP_SUMMARY.md  CONTRIBUTING.md  Improvement Considerations.md  JAPANESE_NLP_SUMMARY.md  MANIFEST.in  Makefile  PATTERN_REFERENCE.md  QUICKSTART.md  RAG_IMPLEMENTATION_SUMMARY.md  README.md  REQUIREMENTS.md  package-lock.json  pyproject.toml  redacted_sample.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  restore_tokens.py  test_sample.txt  validate_patterns.py  verify_japanese.py
.github/: PYPI_SETUP.md
.github/workflows/: ci.yml  pii-scan.yml  publish.yml  release.yml
config/: keywords.yml  rag_security_policy.yml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: ARCHITECTURE.md  RAG_QUICKSTART.md  RAG_SECURITY_ARCHITECTURE.md  README.md  TOKEN_MAP_STORAGE.md  YAML_UTILITIES_GUIDE.md  _TEMPLATE.md  configuration.md  custom-patterns.md  installation.md  patterns.md  quickstart.md  rag-integration.md  verification.md  yaml_utilities.md
docs/api/: api-reference.md
docs/architecture/: ARCHITECTURE.md
docs/archive/: COMPLETE_REORGANIZATION_SUMMARY.md  COMPLIANCE_PATTERNS_SUMMARY.md  GOLANG_COMPATIBILITY.md  KEYWORDS_CREATION_SUMMARY.md  KEYWORD_SYSTEM_COMPARISON.md  PATTERN_CLEANUP_REPORT.md  PATTERN_CLEANUP_SUMMARY.md  PATTERN_ENGINE_REFACTORING_SUMMARY.md  PATTERN_REFACTORING_SUMMARY.md  README.md  REGEX_COMPATIBILITY_REVIEW.md  STRUCTURE_COMPARISON.md  VERIFICATION_CENTRALIZATION_SUMMARY.md
docs/cn/: RAG_QUICKSTART.md  api-reference.md  configuration.md  custom-patterns.md  installation.md  patterns.md  quickstart.md  supported-patterns.md  verification.md
docs/design/: CONTEXT_FILTERING_DESIGN.md
docs/getting-started/: quickstart.md
docs/guides/: CONTEXT_FILTERING_GUIDE.md  CONTEXT_PRESETS_CHEATSHEET.md  CONTEXT_PRESETS_GUIDE.md  README.md  cicd-integration.md  configuration.md  context-analysis.md  nlp-features.md  patterns.md  verification.md  yaml_utilities.md
docs/kr/: ARCHITECTURE.md  RAG_QUICKSTART.md  RAG_SECURITY_ARCHITECTURE.md  TOKEN_MAP_STORAGE.md  TOKEN_PATTERNS.md  YAML_UTILITIES_GUIDE.md  patterns.md  (+9 more)
examples/: bulk_training_data_demo.py  cicd_scan.sh  context_filtering_examples.py  context_presets_examples.py  fake_data_demo.py  fake_data_quickstart.py  file_generation_demo.py  file_generators.py  langchain_integration.py  nlp_example.py  rag_api_example.py  rag_mask_vs_fake.py  rag_quickstart.py  yaml_example.py  yaml_usage_example.py  yaml_utils.py
patterns/: cn.yml  common.yml  iban.yml  in.yml  jp.yml  kr.yml  tokens.yml  tw.yml  us.yml
schemas/: pattern-schema.json
src/: verification
tests/: TESTING.md  __init__.py  test_async_engine.py  test_bulk_generator.py  test_cjk_patterns.py  test_cli.py  test_context_filtering.py  test_engine.py  test_engine_edge_cases.py  test_fake_file_generators.py  test_fake_generator.py  test_fake_strategy.py  test_location_field.py  test_nlp.py  test_pattern_overlap.py  test_patterns.py  test_rag_config.py  test_rag_security.py  test_registry_edge_cases.py  test_restore_tokens.py  test_server.py  test_timestamp_confusion.py  test_token_patterns.py  test_verification.py  test_verification_integration.py  test_yaml_utils.py  test_zipcode_alphanumeric.py
(+26 files in other folders)
